Add styling to all views; mount public folder at root

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<title>404 Not found</title>
+	<link href="resources/reset.css" rel="stylesheet" type="text/css">
+	<link href="resources/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>404</h1>
-	<h1>We couldn't locate the file or directory you were looking for. Sorry about that.</h1>
+	<h2>We couldn't locate the file or directory you were looking for. Sorry about that.</h2>
 </body>
 </html>
