--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>File Server</title>
+	<link href="resources/reset.css" rel="stylesheet" type="text/css">
+	<link href="resources/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1></h1>
