--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>404 Not found</title>
-	<link href="resources/reset.css" rel="stylesheet" type="text/css">
-	<link href="resources/style.css" rel="stylesheet" type="text/css">
+	<link href="/resources/reset.css" rel="stylesheet" type="text/css">
+	<link href="/resources/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>404</h1>
