--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>File Server</title>
-	<link href="/resources/reset.css" rel="stylesheet" type="text/css">
-	<link href="/resources/style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-	<h1>
-		<% for(var i=0; i < location.length; i++) { %>
-			 <%= location[i] + ' >' %> 
-		<% } %>
+    <head>
+        <title>File Server</title>
+        <link href="/resources/reset.css" rel="stylesheet" type="text/css">
+        <link href="/resources/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <h1>
+            > 
+            <% for(var i=0; i < location.length; i++) { %>
+            <% if(!(location[i].length < 1)) {%>
+                <%= location[i] + ' >' %> 
+            <% }%>
 
-	</h1>
-	<table>
-	<% for(var i=0; i < files.length; i++) { %>
-	   <tr>
-	     <td><%= files[i].name %></td>
-	     <td><%= files[i].properties.size %></td>
-	     <td><%= files[i].properties.size %></td>
-	   </tr>
-	<% } %>
-	</table>
-</body>
+            <% } %>
+        </h1>
+
+        <% if(files.length < 1) {%>
+            <%= 'There doesn\'t appear to be anything in this folder!' %> 
+        <% } else {%>
+        <table>
+            <tr>
+                <th></th>
+                <th>File name</th>
+                <th>File size</th>
+                <th>Last modified</th>
+            </tr>
+            <% for(var i=0; i < files.length; i++) { %>
+            <tr>
+                <% if(files[i].properties.nlink == 2) {%>
+                    <td class="folder"></td><td><a class="folder" href="<%= location.join() + files[i].name %>"><%= files[i].name %></a></td><td></td><td><%= formatDate(files[i].properties.mtime) %></td>
+                <% } else { %>
+                    <td></td>
+                    <td><a href="<%= location.join() + files[i].name %>"><%= files[i].name %></a></td>
+                    <td><%= bytesToSize(files[i].properties.size) %></td>
+                    <td><%= formatDate(files[i].properties.mtime) %></td>
+                <% }%>
+            </tr>
+            <% } %>
+        </table>
+        <% }%>
+    </body>
 </html>
