--- a/views/main.ejs
+++ b/views/main.ejs
@@ -47,6 +47,10 @@
                 <% } %>
             </table>
             <% }%>
+            <h2>
+                Select File: <input type='file' id='file'> <input type='button' id='submit' value='Upload!'>
+            </h2>
         </main>
+    <script src='/resources/submit.js'></script>
     </body>
 </html>
