Added the ability to create folders
Typing the name of a new folder in the input field will create a post
request to the server when submitted.

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -45,10 +45,14 @@
                     <% }%>
                 </tr>
                 <% } %>
+                <hr />
             </table>
             <% }%>
             <h2>
-                Select File: <input type='file' id='file'> <input type='button' id='submit' value='Upload!'>
+                Select File: <input type='file' id='file'><br /><input type='button' id='submit' value='Upload!'>
+            </h2>
+            <h2>
+                Create directory: <input type='text' id='folder'><br /><input type='button' id='create' value='Create folder!'>
             </h2>
         </main>
     <script src='/resources/submit.js'></script>
