--- a/public/resources/style.css
+++ b/public/resources/style.css
@@ -54,10 +54,17 @@ main {
 table {
     padding-top: 25px;
     width: 100%;
+    padding-bottom: 25px;
 }
 td {
     padding-top: 5px;
     padding-bottom: 5px;
+}
+hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 @media screen and (max-width: 750px) {
     main {
