Minor design fixes

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -45,11 +45,11 @@
                     <% }%>
                 </tr>
                 <% } %>
-                <hr />
             </table>
             <% }%>
+            <hr />
             <h2>
-                Select File: <input type='file' id='file'><br /><input type='button' id='submit' value='Upload!'>
+                Select File: <input type='file' id='file'><br /><input type='button' id='submit' value='Upload file!'>
             </h2>
             <h2>
                 Create directory: <input type='text' id='folder'><br /><input type='button' id='create' value='Create folder!'>
